data/derived/fa15/progs/unify/prog1522.ml.out
Characters 67-85:
  | false ->  [digitsOfInt (n/10)]::[];;
               ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list list
